# blog

./: .gitignore  .travis.yml  README.md  about.md  blog.cabal  contact.md  default.nix  deploy.sh  deploy_from.sh  fixed-version.json  index.html  index.md  makefile  manual_deploy.sh  result  shell.nix  site.hs  travis-shell.nix
archive/: index.html
assets/anonymous-pro/: anonymous_pro-webfont.eot  anonymous_pro_b-webfont.eot  anonymous_pro_bi-webfont.eot  anonymous_pro_i-webfont.eot  stylesheet.css
assets/work-sans/: stylesheet.css  worksans-bold-webfont.eot  worksans-light-webfont.eot  worksans-regular-webfont.eot
contact/: index.html
css/: code-color.css  code-color.scss  default.css  default.scss
oembed/posts/: 2016-02-27-setting-up-nixos.md.json  2016-02-27-setting-up-nixos.md.xml  (+20 more)
posts/: 2016-02-27-setting_up_nixos.md  2016-03-02-packaging-this-blog.md  2016-03-12-setting-up-a-hydra-build-server.md  2016-03-12-setting-up-a-hydra-build-server.wipmd  2016-04-13-goodbye-nixos.md  2016-05-08-dirty-laundry.md  2016-23-01-packaging-this-blog.md  2019-03-23-Writing-Blogs-from-Notion.md  2019-03-24-CI-ing-This-Blog.md  2019-03-28-Check-out-notion-log-exec.md  2019-03-30-Oreoreoreo-+-Making-Things-You-Can-Finish.md  2019-03-30-oreoreoreo-+-Making-things-you-can-Finish.md  2019-03-31-Baba-is-You-Shirts.md  2019-04-29-Rust,-Wasm,-and-a-new-Tattoo.md  2019-05-14-Downloads-and-Drag-Drop-in-radial-dots.md  asd.md  sdoufioaf.md
scripts/: bump-fixed-build.sh  deploy.sh
templates/: archive.html  default.html  index.html  oembed.json  oembed.xml  post.html
(+29 files in other folders)
