name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.8.*
                  , hakyll == 4.7.*
                  , hakyll-sass == 0.2.*
                  , filepath == 1.4.*
                  , split == 0.2.*
  ghc-options:      -threaded -dynamic
  default-language: Haskell2010
